2010-04-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* coerce.h: Remove luaTeX specific code.

2010-04-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* convert, splitup.c: Remove luatex.
	* common.defines: Remove LUATANGLEHELP.
	Add PBIBTEXHELP, PDVITYPEHELP, PPLTOTFHELP, and PTFTOPLHELP.

2010-04-11  Karl Berry  <karl@tug.org>

	* convert: handle pbibtex, ptex, ptftopl, ppltotf, pdvitype.
	* splitup.c: handle ptex.

2010-03-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* common.defines (BIBXRETALLOCSTRING): New procedure.

2010-03-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* common.defines (BIBXRETALLOCNOSET): New procedure.
	(kpsesetprogname): Removed.

2010-03-05  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* texmf.defines: Moved setupboundvariable from here ...
	* common.defines: ... to here for use in non-engine programs.
	* common.defines (xcalloc, xcallocarray): Declare these.

2010-02-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

        * common.defines (makesuffix, removesuffix): Remove these.

2010-01-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* main.c: Remove unused extern declaration of yylen.

2009-12-14  Karl Berry  <karl@tug.org>

	* convert.bat: remove, obsolete.
	* Makefile.am: don't distribute it.

2009-12-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* coerce.h: Declare gettexstring().

2009-10-24  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* common.defines: Add new functions kpse{in,out}nameok).
	* texmf.defines: Remove open{in,out}nameok.

2009-10-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* coerce.h: Remove all references to mp.
	For TeX like engines #include <synctexdir/synctex.h>.

2009-09-26  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* fixwrites.c: Corrected a typo (ofm2opl=>opl2ofm).

2009-09-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* web2c-lexer.l, web2c-parser.y: Handle noreturn procedures.

2009-09-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* makecpool.c: Reorganize to use just one argument BASE.